--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,7 @@ html {
   --color-surface-variant: #eff2f8;
   --color-surface-variant-dark: #ebeef3;
   --color-primary: #0f80f0;
+  --color-primary-light: #0f7ff01a;
   --color-primary-variant: rgb(7, 104, 201);
   /* --color-secondary: #D33396; */
   --color-on-primary: white;
@@ -65,7 +66,7 @@ html {
   --page-gap: 24px;
 
   --text-color: rgb(54, 54, 54);
-  --border-color: rgb(201, 201, 201);
+  --border-color: rgb(224, 224, 224);
 
 }
 
@@ -99,7 +100,7 @@ label {
   line-height: 1.5em;
 }
 
-p{
+p {
   margin: 1em 0;
 }
 
@@ -145,6 +146,7 @@ button.btn {
   fill: white;
   color: var(--color-on-surface);
   height: 2.4em;
+  margin: 0.5em 0;
 }
 
 button.icon-btn {
@@ -156,6 +158,15 @@ button.icon-btn {
 button.btn.plain {
   background-color: transparent;
   color: var(--color-primary);
+}
+
+button.btn.plain:hover {
+  background-color: var(--color-primary-light);
+}
+
+
+button.btn.plain svg {
+  fill: var(--color-primary);
 }
 
 
