--- a/src/styles/editor/pdf-editor.css
+++ b/src/styles/editor/pdf-editor.css
@@ -35,7 +35,15 @@
 
 .pdf-editor .panel-top button.plain {
     color: white;
-    fill: white;
+    fill: white !important;
+}
+
+.pdf-editor .panel-top button.plain:hover{
+    background-color: rgba(255, 255, 255, 0.116);
+}
+
+.pdf-editor .panel-top button svg{
+    fill: inherit !important;
 }
 
 
