--- a/src/styles/editor/index.css
+++ b/src/styles/editor/index.css
@@ -28,6 +28,13 @@
     margin-bottom: 0;
 }
 
+
+.editor .draggable-form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .editor .input-group {
     margin-bottom: 3rem;
 }
