--- a/src/styles/editor/pdf-editor.css
+++ b/src/styles/editor/pdf-editor.css
@@ -36,13 +36,15 @@
 .pdf-editor .panel-top button.plain {
     color: white;
     fill: white !important;
+    background-color: transparent;
+    border-radius: 50px;
 }
 
-.pdf-editor .panel-top button.plain:hover{
+.pdf-editor .panel-top button.plain:hover {
     background-color: rgba(255, 255, 255, 0.116);
 }
 
-.pdf-editor .panel-top button svg{
+.pdf-editor .panel-top button svg {
     fill: inherit !important;
 }
 
@@ -66,18 +68,18 @@
     background-color: transparent;
 }
 
-.pdf-editor .panel-top  .color-pick.c1{
+.pdf-editor .panel-top .color-pick.c1 {
     background-color: #ffb703;
 }
-.pdf-editor .panel-top  .color-pick.c2{
+
+.pdf-editor .panel-top .color-pick.c2 {
     background-color: #219ebc;
 }
 
-.pdf-editor .panel-top  .color-pick.c3{
+.pdf-editor .panel-top .color-pick.c3 {
     background-color: #ff006e;
 }
-.pdf-editor .panel-top  .color-pick.c4{
+
+.pdf-editor .panel-top .color-pick.c4 {
     background-color: #8e48eb;
 }
-
-
